--- a/style_login_signup.css
+++ b/style_login_signup.css
@@ -1,5 +1,4 @@
 body {
-    /* background-color: #2ec1ac; */
     background: linear-gradient(127deg, rgba(29,219,135,.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(217deg, rgba(129,178,20,.8), rgba(0,255,0,0) 70.71%),
             linear-gradient(90deg, rgba(29,219,135,.8), rgba(255,0,0,0) 70.71%),
@@ -11,6 +10,10 @@ body {
     align-items: center;
     justify-content: space-evenly;
     height: 100vh;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+        display: none;
 }
 h1 {
     font-size: 3rem;
