--- a/style_main.css
+++ b/style_main.css
@@ -116,7 +116,26 @@ hr {
     padding: 50px;
     color: rgba(32,106,93);
 }
-.photoBtn {
+#form-upload{
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+input[type=file]::file-selector-button{
+    font-size: 0.8rem;
+    font-family: 'Recursive', sans-serif;
+    border: none;
+    padding: 5px;
+    color: white;
+    background: linear-gradient(127deg, rgba(29,219,135,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(217deg, rgba(129,178,20,.8), rgba(0,255,0,0) 70.71%),
+            linear-gradient(90deg, rgba(29,219,135,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(45deg, rgba(84,227,70,.8), rgba(255,0,0,0) 70.71%),
+            linear-gradient(336deg, rgba(32,106,93,.8), rgba(0,0,255,0) 70.71%);
+}
+.photoBtn{
     height: 90px;
     width: 90px;
     font-size: 1.2rem;
