--- a/style_main.css
+++ b/style_main.css
@@ -116,7 +116,7 @@ hr {
     padding: 50px;
     color: rgba(32,106,93);
 }
-#form-upload{
+#form-upload, #form-capture{
     height: 40%;
     display: flex;
     flex-direction: column;
@@ -148,6 +148,9 @@ input[type=file]::file-selector-button{
             linear-gradient(90deg, rgba(29,219,135,.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(45deg, rgba(84,227,70,.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(336deg, rgba(32,106,93,.8), rgba(0,0,255,0) 70.71%);
+}
+.photoBtn:active, input[type=file]:active{
+    transform: scale(0.98);
 }
 .profile{
     height: 90%;
