--- a/style_main.css
+++ b/style_main.css
@@ -82,11 +82,18 @@ hr {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    font-size: 1.2rem;
-    color: rgba(32,106,93);
+    font-size: 1rem;
+    color: rgb(32,106,93);
     background-color: white;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
+}
+.graphbar{
+    fill: rgb(32,106,93);
+    transition: all 0.3s ease;
+}
+.graphbar:hover{
+    fill: #2ec1ac;
 }
 .stats{
     height: 90%;
@@ -96,10 +103,30 @@ hr {
     align-items: center;
     justify-content: space-evenly;
     font-size: 1.2rem;
-    color: rgba(32,106,93);
+    color: rgb(32,106,93);
     background-color: rgba(255, 255, 255, 0.233);
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
+}
+table{
+    border: 2px solid rgb(32,106,93);
+    border-collapse: separate;
+    color: white;
+}
+td{
+    border: 1px solid rgb(32,106,93);
+    border-collapse: separate;
+}
+tr:first-child td{
+    border-bottom-width: 2px;
+    font-weight: bold;
+}
+tr:last-child td{
+    border-top-width: 2px;
+    font-weight: bold;
+}
+td{
+    padding: 5px;
 }
 .photo{
     height: 90%;
@@ -114,7 +141,7 @@ hr {
     font-size: 1.2rem;
     margin: 0px 20px;
     padding: 50px;
-    color: rgba(32,106,93);
+    color: rgb(32,106,93);
 }
 #form-upload, #form-capture{
     height: 40%;
@@ -170,5 +197,5 @@ input[type=file]::file-selector-button{
     font-size: 1.2rem;
     padding: 10px;
     color: white;
-    border-bottom: 2px solid rgba(32,106,93);
+    border-bottom: 2px solid rgb(32,106,93);
 }
